@startuml

title __CONTROL's Class Diagram__\n

    namespace om.unidates.Unidates.UniDates {
      namespace Control {
        class com.unidates.Unidates.UniDates.Control.InteractionControl {
            + aggiungiMatch()
            + bloccaStudente()
            + isValidMatch()
            + ricercaStudente()
            + sbloccaStudente()
            - checkEmail()
        }
      }
    }
  


    namespace om.unidates.Unidates.UniDates {
      namespace Control {
        class com.unidates.Unidates.UniDates.Control.ModerationControl {
            ~ sessionRegistry : SessionRegistry
            + inviaAmmonimento()
            + inviaSegnalazione()
            + inviaSegnalazioneCommunityManager()
            + inviaSospensione()
            + moderatoreInSessione()
            - checkAmmonimento()
            - checkEmail()
            - checkSegnalazione()
            - checkSospensione()
        }
      }
    }

  


    namespace om.unidates.Unidates.UniDates {
      namespace Control {
        class com.unidates.Unidates.UniDates.Control.ModifyProfileControl {
            ~ passwordEncoder : PasswordEncoder
            ~ sessionRegistry : SessionRegistry
            + aggiungiFotoLista()
            + aggiungiFotoProfilo()
            + cambiaPassword()
            + cancellaAccountPersonale()
            + eliminaFotoLista()
            + modificaProfilo()
            + setFotoProfilo()
            + trovaFoto()
            + trovaProfilo()
            - checkEmail()
            - checkFoto()
            - checkPassword()
            - checkProfilo()
        }
      }
    }

  


    namespace om.unidates.Unidates.UniDates {
      namespace Control {
        class com.unidates.Unidates.UniDates.Control.UserManagementControl {
            ~ passwordEncoder : PasswordEncoder
            ~ sessionRegistry : SessionRegistry
            + confermaRegistrazione()
            + isAlreadyRegistered()
            + registrazioneStudente()
            + studenteInSessione()
            + trovaTuttiStudenti()
            - checkEmail()
            - checkProfilo()
            - checkStudente()
        }
      }
    }

  

  com.unidates.Unidates.UniDates.Control.InteractionControl o-- com.unidates.Unidates.UniDates.Manager.MatchManager : matchManager
  com.unidates.Unidates.UniDates.Control.InteractionControl o-- com.unidates.Unidates.UniDates.Manager.NotificaManager : notificaManager
  com.unidates.Unidates.UniDates.Control.InteractionControl o-- com.unidates.Unidates.UniDates.Manager.UserManager : userManager
  com.unidates.Unidates.UniDates.Control.ModerationControl o-- com.unidates.Unidates.UniDates.Manager.ModerazioneManager : moderazioneManager
  com.unidates.Unidates.UniDates.Control.ModerationControl o-- com.unidates.Unidates.UniDates.Manager.NotificaManager : notificaManager
  com.unidates.Unidates.UniDates.Control.ModerationControl o-- com.unidates.Unidates.UniDates.Manager.UserManager : userManager
  com.unidates.Unidates.UniDates.Control.ModifyProfileControl o-- com.unidates.Unidates.UniDates.Manager.ProfiloManager : profiloManager
  com.unidates.Unidates.UniDates.Control.ModifyProfileControl o-- com.unidates.Unidates.UniDates.Manager.UserManager : userManager
  com.unidates.Unidates.UniDates.Control.UserManagementControl o-- com.unidates.Unidates.UniDates.Manager.Registrazione.Publisher : publisher
  com.unidates.Unidates.UniDates.Control.UserManagementControl o-- com.unidates.Unidates.UniDates.Manager.UserManager : userManager
  com.unidates.Unidates.UniDates.Control.UserManagementControl o-- com.unidates.Unidates.UniDates.Repository.VerificationTokenRepository : verificationTokenRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
